codepkg/objects/F_42_Actual_Hours__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_42__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>F-42</label>
        <referenceTo>F42__c</referenceTo>
        <relationshipLabel>13. ACTUAL HOURS</relationshipLabel>
        <relationshipName>F_42_Actual_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>F-42 Actual Hours</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>F-42 Actual Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>